# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: game_engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
tests/brain_games/: test_cli.py
tests/brain_games/games/: test_calc.py  test_even.py  test_gcd.py  test_prime.py  test_progression.py
