[tool.poetry]
name = "hexlet-code"
version = "0.6.3"
description = "Set of console games to test your mathematical skills"
authors = ["toro <timofey89rus@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "brain_games" },
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: End Users/Desktop",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.12"
	"Topic :: Games/Entertainment :: Puzzle Games"
]
repository = "https://github.com/toro89rus/python-project-49"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
